security: enforce chat group access across HTTP message APIs